# webapirust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  insomnia.json
configuration/: default.yaml
deploy/helm/webrust/: Chart.yaml  values.yaml
deploy/helm/webrust/templates/: _helpers.tpl  app-deployment.yaml  app-service.yaml  database-deployment.yaml  database-pvc.yaml  database-secret.yaml  database-service.yaml  ingress.yaml
docs/: index.md  owasp-dragon-template.md  threat-model.md
migrations/: 20250923165000_create_users_table.sql  20250924160000_add_auth_columns.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: datasource.yml
src/: lib.rs  main.rs
src/app/: mod.rs  rate_limit.rs  router.rs  state.rs
src/application/: mod.rs
src/application/dtos/: auth.rs  mod.rs  user.rs
src/application/services/: auth_service.rs  mod.rs  user_service.rs
src/config/: mod.rs  settings.rs
src/domain/: errors.rs  mod.rs  value_objects.rs
src/domain/entities/: mod.rs  user.rs
src/domain/repositories/: mod.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs  pool.rs
src/infrastructure/repositories/: mod.rs  postgres_user_repository.rs
src/presentation/: mod.rs
src/presentation/http/: docs.rs  mod.rs
src/shared/: error.rs  mod.rs  validation.rs
src/shared/security/: mod.rs  password.rs  token.rs
src/telemetry/: audit.rs  logging.rs  metrics.rs  mod.rs
tests/: bdd.rs
tests/features/: authentication.feature
tests/support/: in_memory_user_repository.rs  mod.rs
(+10 files in other folders)
