[package]
name = "webrust"
version = "0.1.0"
edition = "2021"

[dependencies]
metrics = "0.22"
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
axum-prometheus = "0.6"
config = { version = "0.14", default-features = false, features = ["yaml"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate"
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
tower_governor = { version = "0.5", features = ["axum"] }
governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = { version = "1", default-features = false, features = ["std", "unicode-case"] }
once_cell = "1"
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
argon2 = { version = "0.5", features = ["password-hash"] }
jsonwebtoken = "9"









[dev-dependencies]
cucumber = "0.20"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
harness = false
